--- a/IOSHealthKit/Base.lproj/Main.storyboard
+++ b/IOSHealthKit/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 <state key="normal" image="login_button"/>
                                 <connections>
                                     <action selector="handleLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ofv-Ug-e7j"/>
-                                    <segue destination="3zd-WQ-74h" kind="show" id="0Rm-Mt-bvV"/>
+                                    <segue destination="Az5-WP-p4p" kind="show" id="9us-aD-OT1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -71,9 +71,25 @@
             <point key="canvasLocation" x="-127" y="134"/>
         </scene>
         <!--Item-->
+        <scene sceneID="LfR-uA-Qpy">
+            <objects>
+                <viewController id="0MJ-6s-Gpw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OlG-MK-MKw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="yRS-1p-wRM"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="dkA-2j-SC3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oo6-BR-id6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-719" y="1773"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="BcO-Jf-Vh8">
             <objects>
-                <viewController id="Mm5-Fj-XcP" customClass="HomeController" customModule="IOSHealthKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Mm5-Fj-XcP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y78-Lr-fT5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -84,7 +100,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pOf-PQ-4oa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-116" y="1746"/>
+            <point key="canvasLocation" x="-25" y="1773"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="sFf-4F-hRo">
+            <objects>
+                <viewController id="kh0-tU-7ai" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Co9-Fk-VYZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="mUs-m5-PXN"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="y7v-Ob-SeZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ynw-tQ-dDC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="1773"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ZMB-wV-fie">
+            <objects>
+                <viewController id="25C-Pa-CFP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UNN-ie-PJs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="fbn-M6-5km"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Qv8-7m-wHK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F1H-DM-Pv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1305" y="1773"/>
         </scene>
         <!--Sign Up Controller-->
         <scene sceneID="l8O-Sf-UH3">
@@ -107,14 +155,28 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="iJ7-bo-5dG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rQe-aE-hSf">
+                                <rect key="frame" x="87" y="450" width="200" height="45"/>
+                                <state key="normal" image="SignUp"/>
+                                <connections>
+                                    <action selector="handleLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zt8-yk-8Fy"/>
+                                    <action selector="signUpButton:" destination="KMI-4H-Se1" eventType="touchUpInside" id="P9a-xO-OUh"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="fyf-aZ-usv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="FbC-jx-qGf" firstAttribute="trailing" secondItem="rQe-aE-hSf" secondAttribute="trailing" constant="88" id="0eU-mg-7RH"/>
                             <constraint firstAttribute="bottom" secondItem="02f-Wc-Bav" secondAttribute="bottom" id="2I7-Tk-zib"/>
+                            <constraint firstItem="rQe-aE-hSf" firstAttribute="leading" secondItem="FbC-jx-qGf" secondAttribute="leading" constant="87" id="6TM-Hk-RQo"/>
+                            <constraint firstItem="A5e-lw-by9" firstAttribute="top" secondItem="rQe-aE-hSf" secondAttribute="bottom" constant="119" id="Av8-6S-kKq"/>
                             <constraint firstAttribute="trailing" secondItem="02f-Wc-Bav" secondAttribute="trailing" id="R1k-Kx-Ncy"/>
                             <constraint firstItem="02f-Wc-Bav" firstAttribute="top" secondItem="hKt-TO-AAw" secondAttribute="top" id="hQf-po-Fqs"/>
                             <constraint firstItem="A5e-lw-by9" firstAttribute="leading" secondItem="FbC-jx-qGf" secondAttribute="leading" constant="48" id="kDF-b9-E7b"/>
+                            <constraint firstItem="rQe-aE-hSf" firstAttribute="top" secondItem="FbC-jx-qGf" secondAttribute="top" constant="430" id="pgf-Wz-lnA"/>
+                            <constraint firstItem="A5e-lw-by9" firstAttribute="top" secondItem="rQe-aE-hSf" secondAttribute="bottom" constant="119" id="psb-Ie-Qoc"/>
                             <constraint firstItem="FbC-jx-qGf" firstAttribute="bottom" secondItem="A5e-lw-by9" secondAttribute="bottom" constant="20" id="qgb-fD-OkZ"/>
                             <constraint firstItem="02f-Wc-Bav" firstAttribute="leading" secondItem="hKt-TO-AAw" secondAttribute="leading" id="rBq-Lj-BjA"/>
                             <constraint firstItem="FbC-jx-qGf" firstAttribute="trailing" secondItem="A5e-lw-by9" secondAttribute="trailing" constant="49" id="xMa-iS-naD"/>
@@ -131,25 +193,32 @@
             <point key="canvasLocation" x="930" y="134"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="zr3-WK-Fdo">
+        <scene sceneID="FcW-5c-8mq">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="3zd-WQ-74h" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Az5-WP-p4p" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TH1-eq-OXX">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s61-K0-4W5">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Mm5-Fj-XcP" kind="relationship" relationship="viewControllers" id="zSl-rM-5pd"/>
+                        <segue destination="Mm5-Fj-XcP" kind="relationship" relationship="viewControllers" id="5UV-N3-bgT"/>
+                        <segue destination="0MJ-6s-Gpw" kind="relationship" relationship="viewControllers" id="LQC-V4-evt"/>
+                        <segue destination="kh0-tU-7ai" kind="relationship" relationship="viewControllers" id="xZQ-66-apK"/>
+                        <segue destination="25C-Pa-CFP" kind="relationship" relationship="viewControllers" id="B8h-qz-Xug"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QUC-wB-pWt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="epB-dM-V9n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-116" y="876.61169415292363"/>
+            <point key="canvasLocation" x="242" y="869"/>
         </scene>
     </scenes>
     <resources>
+        <image name="SignUp" width="200" height="45"/>
         <image name="bg_app" width="375" height="667"/>
         <image name="login_button" width="200" height="44.666667938232422"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="iJ7-bo-5dG"/>
+    </inferredMetricsTieBreakers>
 </document>
