--- a/IOSHealthKit/Base.lproj/Main.storyboard
+++ b/IOSHealthKit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Az5-WP-p4p">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -56,17 +56,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yjk-L1-BNG" secondAttribute="trailing" constant="70" id="shr-Ch-I27"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="MSw-aJ-EzS" appends="YES" id="ukK-5C-HjD"/>
-                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="MSw-aJ-EzS">
-                    <connections>
-                        <action selector="backgroundTapped:" destination="BYZ-38-t0r" id="Ulu-27-rTw"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-127" y="134"/>
         </scene>
@@ -77,7 +69,7 @@
                     <view key="view" contentMode="scaleToFill" id="OlG-MK-MKw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.0" green="0.36666460969999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="yRS-1p-wRM"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="dkA-2j-SC3"/>
@@ -109,30 +101,100 @@
                     <view key="view" contentMode="scaleToFill" id="Co9-Fk-VYZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.10980392160000001" green="0.2784313725" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="mUs-m5-PXN"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="y7v-Ob-SeZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ynw-tQ-dDC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="625" y="1773"/>
+            <point key="canvasLocation" x="1366" y="1773"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="ZMB-wV-fie">
             <objects>
                 <viewController id="25C-Pa-CFP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UNN-ie-PJs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQr-Av-28I">
+                                <rect key="frame" x="165" y="333" width="53" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Dby-gI-ful" kind="show" id="3I1-3D-hiD"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WQr-Av-28I" firstAttribute="top" secondItem="fbn-M6-5km" secondAttribute="top" constant="269" id="O8R-bl-AXa"/>
+                            <constraint firstItem="WQr-Av-28I" firstAttribute="leading" secondItem="fbn-M6-5km" secondAttribute="leading" constant="165" id="Q4N-pi-Vfa"/>
+                            <constraint firstItem="fbn-M6-5km" firstAttribute="trailing" secondItem="WQr-Av-28I" secondAttribute="trailing" constant="157" id="UQq-NI-kL2"/>
+                            <constraint firstItem="fbn-M6-5km" firstAttribute="bottom" secondItem="WQr-Av-28I" secondAttribute="bottom" constant="249" id="nls-FR-GZV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fbn-M6-5km"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Qv8-7m-wHK"/>
+                    <navigationItem key="navigationItem" id="9rx-Nf-qQX"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F1H-DM-Pv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1305" y="1773"/>
+            <point key="canvasLocation" x="641" y="2598"/>
+        </scene>
+        <!--Map Screen-->
+        <scene sceneID="rCq-dr-rhB">
+            <objects>
+                <viewController id="Dby-gI-ful" customClass="MapScreen" customModule="IOSHealthKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DrF-7k-KSI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wcg-Wr-BZv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pin_map" translatesAutoresizingMaskIntoConstraints="NO" id="Y63-EK-a1O">
+                                <rect key="frame" x="167.5" y="293.5" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Kkf-Bi-9bb"/>
+                                    <constraint firstAttribute="width" constant="40" id="UCP-F4-jdn"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcG-jg-tl4">
+                                <rect key="frame" x="0.0" y="568" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="wIf-ah-DiH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iZU-DF-0cE" firstAttribute="bottom" secondItem="bcG-jg-tl4" secondAttribute="bottom" id="8PE-At-0pA"/>
+                            <constraint firstAttribute="trailing" secondItem="wcg-Wr-BZv" secondAttribute="trailing" id="AMM-GU-iE1"/>
+                            <constraint firstItem="Y63-EK-a1O" firstAttribute="centerX" secondItem="DrF-7k-KSI" secondAttribute="centerX" id="EXN-kT-bbr"/>
+                            <constraint firstAttribute="trailing" secondItem="bcG-jg-tl4" secondAttribute="trailing" id="V2f-6s-Wmh"/>
+                            <constraint firstItem="Y63-EK-a1O" firstAttribute="centerY" secondItem="DrF-7k-KSI" secondAttribute="centerY" constant="-20" id="bxs-ax-0pC"/>
+                            <constraint firstItem="iZU-DF-0cE" firstAttribute="bottom" secondItem="wcg-Wr-BZv" secondAttribute="bottom" id="gad-I0-zoO"/>
+                            <constraint firstItem="bcG-jg-tl4" firstAttribute="leading" secondItem="DrF-7k-KSI" secondAttribute="leading" id="oM0-0p-2IY"/>
+                            <constraint firstItem="wcg-Wr-BZv" firstAttribute="top" secondItem="DrF-7k-KSI" secondAttribute="top" id="sjp-vB-A6R"/>
+                            <constraint firstItem="wcg-Wr-BZv" firstAttribute="leading" secondItem="DrF-7k-KSI" secondAttribute="leading" id="wIi-mg-sn5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="iZU-DF-0cE"/>
+                    </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="bcG-jg-tl4" id="ZJw-pA-66e"/>
+                        <outlet property="mapView" destination="wcg-Wr-BZv" id="egP-xb-53f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0lZ-hv-pwJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1472.8" y="2596.5517241379312"/>
         </scene>
         <!--Sign Up Controller-->
         <scene sceneID="l8O-Sf-UH3">
@@ -182,13 +244,9 @@
                             <constraint firstItem="FbC-jx-qGf" firstAttribute="trailing" secondItem="A5e-lw-by9" secondAttribute="trailing" constant="49" id="xMa-iS-naD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FbC-jx-qGf"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="CgE-9E-Ffo" appends="YES" id="4wu-JD-UF9"/>
-                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Ks-XR-XyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="CgE-9E-Ffo"/>
             </objects>
             <point key="canvasLocation" x="930" y="134"/>
         </scene>
@@ -198,25 +256,46 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Az5-WP-p4p" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s61-K0-4W5">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="Mm5-Fj-XcP" kind="relationship" relationship="viewControllers" id="5UV-N3-bgT"/>
                         <segue destination="0MJ-6s-Gpw" kind="relationship" relationship="viewControllers" id="LQC-V4-evt"/>
-                        <segue destination="kh0-tU-7ai" kind="relationship" relationship="viewControllers" id="xZQ-66-apK"/>
-                        <segue destination="25C-Pa-CFP" kind="relationship" relationship="viewControllers" id="B8h-qz-Xug"/>
+                        <segue destination="x8z-Ym-awj" kind="relationship" relationship="viewControllers" id="B8h-qz-Xug"/>
+                        <segue destination="kh0-tU-7ai" kind="relationship" relationship="viewControllers" id="1WB-cq-yzV"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="epB-dM-V9n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="242" y="869"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="RZN-Gt-YNb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="x8z-Ym-awj" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Qv8-7m-wHK"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rl5-OL-e0X">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="25C-Pa-CFP" kind="relationship" relationship="rootViewController" id="QXR-7K-4F9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j3A-Cs-d4K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="641" y="1773"/>
+        </scene>
     </scenes>
     <resources>
         <image name="SignUp" width="200" height="45"/>
         <image name="bg_app" width="375" height="667"/>
         <image name="login_button" width="200" height="44.666667938232422"/>
+        <image name="pin_map" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="iJ7-bo-5dG"/>
